[package]
name = "gnethogs"
version = "0.1.0"
authors = ["Srikanth <srikanth.mahesh1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nethogs-sys = {path = "nethogs-sys"}
gtk = "0.9.2"
gio = "0.9.1"
users = "0.10.0"
once_cell = "1.4.1"
glib = "0.10.2"
